// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Elements renders as <h3> if no "as" prop provided 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</h3>
`;

exports[`Heading Elements renders as an element if "as" prop provided 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h6
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h6>
`;

exports[`Heading Sizes 16rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Heading Sizes 18rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={18}
>
  Heading
</h3>
`;

exports[`Heading Sizes 20rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={20}
>
  Heading
</h3>
`;

exports[`Heading Sizes 24rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={24}
>
  Heading
</h3>
`;

exports[`Heading Sizes 32rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 2rem;
  line-height: 2.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={32}
>
  Heading
</h3>
`;

exports[`Heading Sizes 48rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 3rem;
  line-height: 3.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={48}
>
  Heading
</h3>
`;

exports[`Heading Sizes 56rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 3.5rem;
  line-height: 4rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={56}
>
  Heading
</h3>
`;

exports[`Heading Sizes 64rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={64}
>
  Heading
</h3>
`;

exports[`Heading Sizes 72rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 4.5rem;
  line-height: 4.75rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={72}
>
  Heading
</h3>
`;

exports[`Heading Sizes Boldness renders default boldness 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Heading Sizes Boldness renders with regular font weight 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Heading Sizes Colors renders default color 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Heading Sizes Colors renders with a color 1`] = `
.c0 {
  color: #0CCF61;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="piccolo.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Heading Sizes renders default font size 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<h3
  className="c0"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;
